add_library(
    cc_core_lib
    AutoSegmentationTools.cpp
    CCMiscTools.cpp
    CCShareable.cpp
    ChamferDistanceTransform.cpp
    ChunkedPointCloud.cpp
    CloudSamplingTools.cpp
    Delaunay2dMesh.cpp
    DgmOctree.cpp
    DgmOctreeReferenceCloud.cpp
    DistanceComputationTools.cpp
    ErrorFunction.cpp
    FastMarching.cpp
    FastMarchingForPropagation.cpp
    GeometricalAnalysisTools.cpp
    KdTree.cpp
    LocalModel.cpp
    ManualSegmentationTools.cpp
    MeshSamplingTools.cpp
    Neighbourhood.cpp
    NormalDistribution.cpp
    NormalizedProgress.cpp
    PointProjectionTools.cpp
    Polyline.cpp
    ReferenceCloud.cpp
    RegistrationTools.cpp
    SaitoSquaredDistanceTransform.cpp
    ScalarField.cpp
    ScalarFieldTools.cpp
    SimpleCloud.cpp
    SimpleMesh.cpp
    StatisticalTestingTools.cpp
    TrueKdTree.cpp
    WeibullDistribution.cpp
)
set_target_properties(cc_core_lib PROPERTIES COMPILE_FLAGS ${STATIC_LIB_COMPILE_FLAGS})
